src/objects/CPA_TNF__c.object
<CustomObject>
    <description>Termination Notification Form – If ULPM does not wish to proceed with the work order, he can initiate a termination, post which ADM submits a TNF.</description>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TNF_Auto_ID__c</fullName>
        <displayFormat>TNF-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>TNF Auto ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TNF_Count__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TNF Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dat_Accepted_Date__c</fullName>
        <inlineHelpText>Accepted date of TNF,</inlineHelpText>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Cancelled_Date__c</fullName>
        <inlineHelpText>Cancelled date of TNF,</inlineHelpText>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Delivered_Date__c</fullName>
        <inlineHelpText>Delivered date of TNF,</inlineHelpText>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Resubmitted_Date__c</fullName>
        <inlineHelpText>Resubmitted date of TNF,</inlineHelpText>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Sent_for_Signature__c</fullName>
        <label>Sent for Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Submitted_Date__c</fullName>
        <inlineHelpText>Submission date of TNF</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_TD_Date_Notified__c</fullName>
        <label>Date Notified*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_TD_Effective_Date__c</fullName>
        <label>Effective Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lkp_PWO_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to PWO object</description>
        <label>PWO ID</label>
        <referenceTo>CPA_PWO__c</referenceTo>
        <relationshipLabel>TNF</relationshipLabel>
        <relationshipName>TNF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Unilever representative/manager</description>
        <label>Unilever Contact*</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TNF_Unilever_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>num_Actual_charges__c</fullName>
        <label>Actual Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Planned_charges__c</fullName>
        <label>Planned Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Planned_effort_in_days__c</fullName>
        <label>Planned Effort in Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Variance_in_charges__c</fullName>
        <label>Variance in Charges</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Variance_in_effort__c</fullName>
        <label>Variance in Effort*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Currency__c</fullName>
        <description>Currency of the charges/costs</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Status__c</fullName>
        <description>Auto generated based on user actions</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Terminated_by__c</fullName>
        <description>Entity responsible for termination of the project</description>
        <label>Terminated By*</label>
        <picklist>
            <picklistValues>
                <fullName>Unilever</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Accenture_Contact__c</fullName>
        <description>Name of the Accenture representative/manager</description>
        <label>Vendor Contact*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Actual_effort_in_days__c</fullName>
        <label>Actual Effort in Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_Approved_by__c</fullName>
        <description>Unilever / Accenture person who has approved the termination</description>
        <label>Approved By*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Comments__c</fullName>
        <label>Comments*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Currency__c</fullName>
        <label>Other Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWO_number__c</fullName>
        <description>PWO ID</description>
        <label>PWO Number*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWO_title__c</fullName>
        <description>Title mentioned in the PWO</description>
        <label>PWO Title*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Reason_for_termination__c</fullName>
        <label>Reason for Termination*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Relocation_of_resources__c</fullName>
        <label>Relocation of Resources*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TD_Notice_Required__c</fullName>
        <label>Notice Required*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TNF_ID__c</fullName>
        <description>Auto generated ID</description>
        <label>TNF ID*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Clarity_ID__c</fullName>
        <description>Clarity ID of the project</description>
        <label>Unilever Clarity ID*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_Reason_for_Cancellation__c</fullName>
        <description>Reason for Cancellation</description>
        <label>Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <label>TNF</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>txt_TNF_ID__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_TNF</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_TNF</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA VDM Queue</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_TNF</fullName>
        <filterScope>Queue</filterScope>
        <label>CPA SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>TNF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TNFs</pluralLabel>
    <recordTypes>
        <fullName>CPA_TNF_Accepted</fullName>
        <active>true</active>
        <label>CPA TNF  Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_TNF_Cancelled</fullName>
        <active>true</active>
        <label>CPA TNF Cancelled</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_TNF_Other</fullName>
        <active>true</active>
        <label>CPA TNF Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPA_TNF_Sent_fro_Signed_Signed</fullName>
        <active>true</active>
        <label>CPA TNF Sent fro Signed/Signed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>